[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/pizzaface.png" type="Texture" id=1]
[ext_resource path="res://scenes/Enemies/enemy.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 180.999
height = 440.449

[sub_resource type="CircleShape2D" id=2]
radius = 5641.79

[node name="Enemy" type="KinematicBody2D"]
scale = Vector2( 0.1, 0.1 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -39.6849, 0 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
